--- a/book/content/lectures/introduction.ipynb
+++ b/book/content/lectures/introduction.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "Obiettivo di questo corso non è tanto trovare e mostrare nel dettaglio il funzionamento di algoritmi di ML, quanto invece osservare come questi algoritmi possono esssere utilizzati per affrontare esempi di fisica, o più in geenrale applicati all'ambito della ricerca fisica (o scientifica). \n",
     "\n",
+    "Esistono molti testi per quanto riguarda gli argomenti che sono trattati in questo corso, i principali sono in bibliografia {cite}`aggarwal2018, cowan1998, goodfellow2016, hastie2009, lista2017a, plehn2022, rosasco2017`.\n",
+    "\n",
     "Esistono quattro aspetti essenziali su cui vi è forte divergenza tra il _general purpouse machine learning (GPML) e invece il _scientific machine learning_ (SML). Questi sono \n",
     " 1. Lo scopo (scope)\n",
     " 2. Il modo in cui vengono rappresentati i dati (representation)\n",
@@ -27,20 +29,15 @@
     "\n",
     "Considerato un esperimento supervisionato, per cui dato una variabile $x$ (che può essere un vettore, o anche in un problema semplificato uno scalare) vogliamo ottenere $$ x \\to y = f(x). $$ Chiamiamo FEATURES il vettore delle $x$, e TARGET il vettore delle $y$. La dimensionalità del problema è detta $n$. La rappresentazione consiste nello scegliere la base $\\{x_1,x_2,\\dots,x_n\\}$ su cui intendiamo invece scomporre le $\\underline x$. La scelta di una buona rappresentazione è fondamentale perché potrebbe permettere di semplificare la forma della $f(\\underline x)$ e quindi avere più chiarezza su come esprimerla. Un esempio è dato da considerare un insieme di dati che hanno distribuzione che sul piano è scomodo, ma appena passiamo in coordinate radiali è semplificato. \n",
     "\n",
-    "La caratteristica che distingue SML da GPML è che in SML le features sono in genere suggerite dalla fisica che si sta studiando, mentre nel caso di GPML sono più complicate. Per esempio pensando solo al dover dare la differenza cane vs gatto: si parla allora di _representation_ o _feature_ learning. \n",
+    "La caratteristica che distingue SML da GPML è che in SML le features sono in genere suggerite dalla fisica che si sta studiando, mentre nel caso di GPML sono più complicate. \n",
     "\n",
+    ":::{margin} Features in GPML.\n",
+    "Per esempio pensando solo al dover dare la differenza cane vs gatto: si parla allora di _representation_ o _feature_ learning. \n",
+    ":::\n",
+    "\n",
+    ":::{admonition} Confounding features :class: tip\n",
     "Esistono, in entrambi i casi, quelle che sono invece definite le _confounding features_, ovvero FEATURES che non vorremmo in realtà tenere in considerazione, ma che, un po' come un background sperimentale, rimangono invece e possono essere problematiche per l'algoritmo. Queste sono spesso associate però a proprietà di simmetria di un sistema, come per esempio una invarianza per traslazione: considerata una immagine, posso aspettarmi che una certa feature sia invece spostata dalla posizione in cui mi aspetti che sia. In questi casi non è il sistema che è invariante per simmetria, ma è la domanda che mi sto ponendo che deve invece esserlo. \n",
-    "\n",
-    "\n",
-    "# Bibliography\n",
-    "\n",
-    " - Cowan, Statistical Data Analysis\n",
-    " - Lista, Statistical Methods for Data Analysis\n",
-    " - Hastie et al., The elements of statistical learning\n",
-    " - Goodfellow et al., Deep learning\n",
-    " - Aggrawl, Neural networks and deep learning\n",
-    " - Rosasco, Introductory ML notes,\n",
-    " - Plehn et al., Modern ML for LHC physicists"
+    ":::"
    ]
   },
   {
