--- a/_sources/content/lectures/introduction.ipynb
+++ b/_sources/content/lectures/introduction.ipynb
@@ -28,20 +28,17 @@
     "\n",
     "## Rappresentazioni: qualche dettaglio in più\n",
     "\n",
-    "Considerato un esperimento supervisionato, per cui dato una variabile $x$ (che può essere un vettore, o anche in un problema semplificato uno scalare) vogliamo ottenere \\begin{equation}\n",
-    "    x \\to y = f(x). \n",
-    "\\end{equation} \n",
+    "Considerato un esperimento supervisionato, per cui dato una variabile $x$ (che può essere un vettore, o anche in un problema semplificato uno scalare) vogliamo ottenere $$ x \\to y = f(x). $$\n",
     "\n",
     "```{figure} ../../images/reparametrization.jpeg\n",
     "---\n",
-    "width=100%\n",
-    "align: left\n",
+    "width=2cm\n",
     "figclass: margin\n",
     "---\n",
     "Riparametrizzando da coordinate $(x,y)$ a coordinate $(r, \\theta)$ possiamo semplificare molto la classificazione. \n",
     "```\n",
     "\n",
-    "Chiamiamo FEATURES il vettore delle $x$, e TARGET il vettore delle $y$. La dimensionalità del problema è detta $n$. La rappresentazione consiste nello scegliere la base $\\{x_1,x_2,\\dots,x_n\\}$ su cui intendiamo invece scomporre le $\\underline x$. La scelta di una buona rappresentazione è fondamentale perché potrebbe permettere di semplificare la forma della $f(\\underline x)$ e quindi avere più chiarezza su come esprimerla. Un esempio è dato da considerare un insieme di dati che hanno distribuzione che sul piano è scomodo, ma appena passiamo in coordinate radiali è semplificato (come si può vedere in Fig. ).\n",
+    "Chiamiamo FEATURES il vettore delle $x$, e TARGET il vettore delle $y$. La dimensionalità del problema è detta $n$. La rappresentazione consiste nello scegliere la base $\\{x_1,x_2,\\dots,x_n\\}$ su cui intendiamo invece scomporre le $\\underline x$. La scelta di una buona rappresentazione è fondamentale perché potrebbe permettere di semplificare la forma della $f(\\underline x)$ e quindi avere più chiarezza su come esprimerla. Un esempio è dato da considerare un insieme di dati che hanno distribuzione che sul piano è scomodo, ma appena passiamo in coordinate radiali è semplificato (come si può vedere in figura a margine).\n",
     "\n",
     ":::{margin} Features in GPML.\n",
     "Per esempio pensando solo al dover dare la differenza cane vs gatto: si parla allora di _representation_ o _feature_ learning. \n",
