--- a/_sources/content/lectures/introduction.ipynb
+++ b/_sources/content/lectures/introduction.ipynb
@@ -28,11 +28,11 @@
     "\n",
     "## Rappresentazioni: qualche dettaglio in più\n",
     "\n",
-    "Considerato un esperimento supervisionato, per cui dato una variabile $x$ (che può essere un vettore, o anche in un problema semplificato uno scalare) vogliamo ottenere $$ x \\to y = f(x). $$\n",
+    "Considerato un esperimento supervisionato, per cui dato una variabile $x$ (che può essere un vettore, o anche in un problema semplificato uno scalare) vogliamo ottenere $ x \\to y = f(x). $\n",
     "\n",
     "```{figure} ../../images/reparametrization.jpeg\n",
     "---\n",
-    "width=2cm\n",
+    "align: right\n",
     "figclass: margin\n",
     "---\n",
     "Riparametrizzando da coordinate $(x,y)$ a coordinate $(r, \\theta)$ possiamo semplificare molto la classificazione. \n",
