--- a/book/references/references.bib
+++ b/book/references/references.bib
@@ -12,12 +12,16 @@
   keywords = {Adam,autoencoder,backpropagation,conjugate gradient-descent,Convolutional Neural Networks,Deep Learning,deep reinforcement learning,dropout,generative adversarial networks,Kohonean self-organizaing map,logistic regression,Machine Learning,Neural networks,perceptron,pretraining,Radial Basis Function Networks,Recurrent Neural Networks,Restricted Boltzmann Machines,RMSProp,word2vec}
 }
 
-@book{cowan1998,
-  title = {Statistical Data Analysis},
-  author = {Cowan, G.},
+@book{cowan1998a,
+  title = {Statistical {{Data Analysis}}},
+  author = {Cowan, Glen and Cowan, Glen},
   year = {1998},
-  isbn = {978-0-19-850156-5},
-  keywords = {book,numerical methods: Monte Carlo,statistical analysis}
+  month = mar,
+  publisher = {{Oxford University Press}},
+  address = {{Oxford, New York}},
+  abstract = {This book is a guide to the practical application of statistics in data analysis as typically encountered in the physical sciences. It is primarily addressed at students and professionals who need to draw quantitative conclusions from experimental data. Although most of the examples are taken from particle physics, the material is presented in a sufficiently general way as to be useful to people from most branches of the physical sciences. The first part of the book describes the basic tools of data analysis: concepts of probability and random variables, Monte Carlo techniques, statistical tests, and methods of parameter estimation. The last three chapters are somewhat more specialized than those preceding, covering interval estimation, characteristic functions, and the problem of correcting distributions for the effects of measurement errors (unfolding).                                                        ,                This book is a guide to the practical application of statistics in data analysis as typically encountered in the physical sciences. It is primarily addressed at students and professionals who need to draw quantitative conclusions from experimental data. Although most of the examples are taken from particle physics, the material is presented in a sufficiently general way as to be useful to people from most branches of the physical sciences. The first part of the book describes the basic tools of data analysis: concepts of probability and random variables, Monte Carlo techniques, statistical tests, and methods of parameter estimation. The last three chapters are somewhat more specialized than those preceding, covering interval estimation, characteristic functions, and the problem of correcting distributions for the effects of measurement errors (unfolding).},
+  isbn = {978-0-19-850155-8},
+  file = {/Users/massimosotgia/Zotero/storage/NUBHNAIL/statistical-data-analysis-9780198501558.html}
 }
 
 @book{goodfellow2016,
