--- a/_sources/content/lectures/introduction.ipynb
+++ b/_sources/content/lectures/introduction.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Obiettivo di questo corso non è tanto trovare e mostrare nel dettaglio il funzionamento di algoritmi di ML, quanto invece osservare come questi algoritmi possono esssere utilizzati per affrontare esempi di fisica, o più in geenrale applicati all'ambito della ricerca fisica (o scientifica). \n",
     "\n",
-    "Esistono molti testi per quanto riguarda gli argomenti che sono trattati in questo corso, i principali sono in bibliografia {cite}`aggarwal2018, cowan1998, goodfellow2016, hastie2009, lista2017a, plehn2022, rosasco2017`.\n",
+    "Esistono molti testi per quanto riguarda gli argomenti che sono trattati in questo corso, i principali sono in bibliografia {cite}`aggarwal2018, cowan1998a, goodfellow2016, hastie2009, lista2017a, plehn2022, rosasco2017`.\n",
     "\n",
     "Esistono quattro aspetti essenziali su cui vi è forte divergenza tra il _general purpouse machine learning (GPML) e invece il _scientific machine learning_ (SML). Questi sono \n",
     " 1. Lo scopo (scope)\n",
@@ -36,12 +36,13 @@
     "\n",
     "```{figure} ../../images/reparametrization.jpeg\n",
     "---\n",
+    "name: reparametrization\n",
     "figclass: margin\n",
     "---\n",
     "Riparametrizzando da coordinate $(x,y)$ a coordinate $(r, \\theta)$ possiamo semplificare molto la classificazione. \n",
     "```\n",
     "\n",
-    "Chiamiamo FEATURES il vettore delle $x$, e TARGET il vettore delle $y$. La dimensionalità del problema è detta $n$. La rappresentazione consiste nello scegliere la base $\\{x_1,x_2,\\dots,x_n\\}$ su cui intendiamo invece scomporre le $\\underline x$. La scelta di una buona rappresentazione è fondamentale perché potrebbe permettere di semplificare la forma della $f(\\underline x)$ e quindi avere più chiarezza su come esprimerla. Un esempio è dato da considerare un insieme di dati che hanno distribuzione che sul piano è scomodo, ma appena passiamo in coordinate radiali è semplificato (come si può vedere in figura a margine).\n",
+    "Chiamiamo FEATURES il vettore delle $x$, e TARGET il vettore delle $y$. La dimensionalità del problema è detta $n$. La rappresentazione consiste nello scegliere la base $\\{x_1,x_2,\\dots,x_n\\}$ su cui intendiamo invece scomporre le $\\underline x$. La scelta di una buona rappresentazione è fondamentale perché potrebbe permettere di semplificare la forma della $f(\\underline x)$ e quindi avere più chiarezza su come esprimerla. Un esempio è dato da considerare un insieme di dati che hanno distribuzione che sul piano è scomodo, ma appena passiamo in coordinate radiali è semplificato (come si può vedere in {numref}`reparametrization`).\n",
     "\n",
     ":::{margin} Features in GPML.\n",
     "Per esempio pensando solo al dover dare la differenza cane vs gatto: si parla allora di _representation_ o _feature_ learning. \n",
@@ -56,11 +57,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44f2dad6-a447-4cc9-89da-3041c025df1b",
+   "cell_type": "markdown",
+   "id": "ae290c3d-a08a-4351-9c19-ca8586beb0c1",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
