--- a/book/content/lectures/introduction.ipynb
+++ b/book/content/lectures/introduction.ipynb
@@ -34,7 +34,7 @@
     "    x \\to y = f(x). \n",
     "$$\n",
     "\n",
-    "```{figure} ../../images/reparametrization.jpeg\n",
+    "```{figure} ../../images/reparametrization.jpg\n",
     "---\n",
     "name: reparametrization\n",
     "figclass: margin\n",
