--- a/book/content/lectures/introduction.ipynb
+++ b/book/content/lectures/introduction.ipynb
@@ -44,7 +44,8 @@
     "\n",
     "Chiamiamo FEATURES il vettore delle $x$, e TARGET il vettore delle $y$. La dimensionalità del problema è detta $n$. La rappresentazione consiste nello scegliere la base $\\{x_1,x_2,\\dots,x_n\\}$ su cui intendiamo invece scomporre le $\\underline x$. La scelta di una buona rappresentazione è fondamentale perché potrebbe permettere di semplificare la forma della $f(\\underline x)$ e quindi avere più chiarezza su come esprimerla. Un esempio è dato da considerare un insieme di dati che hanno distribuzione che sul piano è scomodo, ma appena passiamo in coordinate radiali è semplificato (come si può vedere in {numref}`reparametrization`).\n",
     "\n",
-    ":::{margin} Features in GPML.\n",
+    ":::{admonition} Features in GPML.\n",
+    ":class: seealso\n",
     "Per esempio pensando solo al dover dare la differenza cane vs gatto: si parla allora di _representation_ o _feature_ learning. \n",
     ":::\n",
     "\n",
