--- a/book/content/lectures/introduction.ipynb
+++ b/book/content/lectures/introduction.ipynb
@@ -44,12 +44,19 @@
     "\n",
     "Chiamiamo FEATURES il vettore delle $x$, e TARGET il vettore delle $y$. La dimensionalità del problema è detta $n$. La rappresentazione consiste nello scegliere la base $\\{x_1,x_2,\\dots,x_n\\}$ su cui intendiamo invece scomporre le $\\underline x$. La scelta di una buona rappresentazione è fondamentale perché potrebbe permettere di semplificare la forma della $f(\\underline x)$ e quindi avere più chiarezza su come esprimerla. Un esempio è dato da considerare un insieme di dati che hanno distribuzione che sul piano è scomodo, ma appena passiamo in coordinate radiali è semplificato (come si può vedere in {numref}`reparametrization`).\n",
     "\n",
+    "La caratteristica che distingue SML da GPML è che in SML le features sono in genere suggerite dalla fisica che si sta studiando, mentre nel caso di GPML sono più complicate. \n",
+    "\n",
     ":::{admonition} Features in GPML.\n",
     ":class: tip\n",
-    "Per esempio pensando solo al dover dare la differenza cane vs gatto: si parla allora di _representation_ o _feature_ learning. \n",
+    "Per esempio pensando solo al dover dare la differenza cane vs gatto: si parla allora di _representation_ o _feature_ learning ({numref}`featurelearning`). \n",
     ":::\n",
     "\n",
-    "La caratteristica che distingue SML da GPML è che in SML le features sono in genere suggerite dalla fisica che si sta studiando, mentre nel caso di GPML sono più complicate. \n",
+    "```{figure} ../../images/Feature_Learning_Diagram.png\n",
+    "---\n",
+    "name: featurelearning\n",
+    "---\n",
+    "Diagram of the feature learning paradigm in machine learning for application to downstream tasks, which can be applied to either raw data such as images or text, or to an initial set of features for the data. (wikipedia)\n",
+    "```\n",
     "\n",
     ":::{admonition} Confounding features \n",
     ":class: warning\n",
